# Quasar

./: LICENSE  README.md  example.py  main.py  pyproject.toml
.github/workflows/: ci.yml
quasar/cli/: main.py
quasar/core/: task_decorator.py
quasar/examples/: example.py
quasar/model/: task_model.py  taskexecution_model.py
quasar/orchestrator/: task_runner.py
quasar/services/: deps_checker.py  module_manager.py  taskExecution_service.py  task_executioner.py  task_registry.py  task_resolver.py  task_runner.py
quasar/utils/: algorithms.py  configmanager.py  const.py  errorManager.py  logging_factory.py
tests/: test_execution_order.py
