[project.scripts]
quasar = "quasar.cli.main:app"


[project]
name = "quasar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


[tool.uv.dependency-groups.dev]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"